@@ -21,11 +21,13 @@ package org.codehaus.groovy.ant;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.ProjectHelper;
+import org.apache.tools.ant.types.Environment;
+import org.apache.tools.ant.types.Path;
+import org.apache.tools.ant.types.PropertySet;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
@@ -34,12 +36,17 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.net.URISyntaxException;
 import java.nio.file.Paths;
+import java.util.logging.Handler;
+import java.util.logging.Level;
+import java.util.logging.LogRecord;
+import java.util.logging.Logger;
 import java.util.regex.Pattern;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 /**
  * Unit tests for the {@link Groovyc} ant task.
@@ -59,6 +66,15 @@ final class GroovycTest {
         project = new Project();
         project.init();
         ProjectHelper.getProjectHelper().parse(project, antFile);
+
+        // The external jar used by the GROOVY-9197 joint-compilation test is resolved
+        // by the build (see groovy-ant build.gradle) rather than checked into the source
+        // tree, so its location is supplied via a system property.
+        String externalJar = System.getProperty("groovy.ant.test.externalJar");
+        if (externalJar != null) {
+            project.setProperty("externalJar", externalJar);
+        }
+
         project.executeTarget("clean");
 
         String altJavaHome = System.getProperty("java.home");
@@ -243,24 +259,35 @@ final class GroovycTest {
 
     @Test
     void testGroovyc_Joint_NoFork_NestedCompilerArg_WithGroovyClasspath() {
-        // capture ant's output so we can verify the effect of passing compilerarg to javac
-        ByteArrayOutputStream allOutput = new ByteArrayOutputStream();
+        // Capture javac warnings via JUL handler — JavacJavaCompiler logs via System.Logger
+        // which defaults to JUL backend
+        StringBuilder logOutput = new StringBuilder();
+        String loggerName = "org.codehaus.groovy.tools.javac.JavacJavaCompiler";
+        Logger julLogger = Logger.getLogger(loggerName);
+        Level originalLevel = julLogger.getLevel();
+        julLogger.setLevel(Level.ALL);
+        Handler handler = new Handler() {
+            @Override public void publish(LogRecord record) { logOutput.append(record.getMessage()); }
+            @Override public void flush() {}
+            @Override public void close() {}
+        };
+        handler.setLevel(Level.ALL);
+        julLogger.addHandler(handler);
 
-        PrintStream out = System.out;
-        System.setOut(new PrintStream(allOutput));
         try {
             ensureNotPresent("IncorrectGenericsUsage");
             project.executeTarget("Groovyc_Joint_NoFork_NestedCompilerArg_WithGroovyClasspath");
             ensurePresent("IncorrectGenericsUsage");
 
-            String antOutput = adjustOutputToHandleOpenJDKJavacOutputDifference(allOutput.toString());
+            String antOutput = adjustOutputToHandleOpenJDKJavacOutputDifference(logOutput.toString());
             // verify if passing -Xlint in compilerarg had its effect
             Pattern p = Pattern.compile(".*?found[ ]*:[ ]*java.util.ArrayList.*", Pattern.DOTALL);
             assertTrue(p.matcher(antOutput).matches(), "Expected line 1 not found in ant output");
             p = Pattern.compile(".*?required[ ]*:[ ]*java.util.ArrayList<java.lang.String>.*", Pattern.DOTALL);
             assertTrue(p.matcher(antOutput).matches(), "Expected line 2 not found in ant output");
         } finally {
-            System.setOut(out);
+            julLogger.removeHandler(handler);
+            julLogger.setLevel(originalLevel);
         }
     }
 
@@ -327,6 +354,9 @@ final class GroovycTest {
     // GROOVY-9197
     @Test
     void testJointCompilationPropagatesClasspath() {
+        assumeTrue(project.getProperty("externalJar") != null,
+            "External jar not supplied by the build (run via Gradle); "
+            + "skipping joint-compilation classpath-propagation test");
         ensureNotPresent("MakesExternalReference");
         project.executeTarget("jointForkedCompilation_ExternalJarOnClasspath");
         ensureResultOK("MakesExternalReference");
@@ -365,5 +395,91 @@ final class GroovycTest {
     void testBadJavacArgument() {
         var e = assertThrows(BuildException.class, () -> project.executeTarget("badJavacArgument"));
         assertTrue(e.getCause().getMessage().contains("invalid flag: -Xlint:xxx"));
+    }
+
+    // GROOVY-11995
+
+    private static Groovyc newForkedGroovyc(Project project) {
+        Groovyc gc = new Groovyc();
+        gc.setProject(project);
+        gc.setFork(true);
+        return gc;
+    }
+
+    private static java.util.List<String> buildForkCommandLine(Groovyc gc) {
+        java.util.List<String> cmd = new java.util.ArrayList<>();
+        gc.doForkCommandLineList(cmd, new Path(gc.getProject()), File.separator);
+        return cmd;
+    }
+
+    @Test
+    void testJvmargAddedToForkedCommandLine() {
+        Groovyc gc = newForkedGroovyc(project);
+        gc.createJvmarg().setValue("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        assertTrue(buildForkCommandLine(gc).contains("--add-opens=java.base/java.lang=ALL-UNNAMED"));
+    }
+
+    @Test
+    void testSyspropertyAddedToForkedCommandLine() {
+        Groovyc gc = newForkedGroovyc(project);
+        Environment.Variable v = new Environment.Variable();
+        v.setKey("my.compile.flag");
+        v.setValue("true");
+        gc.addSysproperty(v);
+        assertTrue(buildForkCommandLine(gc).contains("-Dmy.compile.flag=true"));
+    }
+
+    @Test
+    void testSyspropertysetAddedToForkedCommandLine() {
+        project.setProperty("myapp.url", "https://example.com");
+        project.setProperty("myapp.timeout", "30");
+        project.setProperty("other.value", "ignored");
+        Groovyc gc = newForkedGroovyc(project);
+        PropertySet ps = new PropertySet();
+        ps.setProject(project);
+        PropertySet.PropertyRef ref = new PropertySet.PropertyRef();
+        ref.setPrefix("myapp.");
+        ps.addPropertyref(ref);
+        gc.addSyspropertyset(ps);
+        java.util.List<String> cmd = buildForkCommandLine(gc);
+        assertTrue(cmd.contains("-Dmyapp.url=https://example.com"));
+        assertTrue(cmd.contains("-Dmyapp.timeout=30"));
+        assertTrue(cmd.stream().noneMatch(s -> s.startsWith("-Dother.value=")));
+    }
+
+    @Test
+    void testInheritAllPassesProjectProperties() {
+        project.setProperty("alpha", "1");
+        project.setProperty("beta", "two");
+        Groovyc gc = newForkedGroovyc(project);
+        gc.setInheritAll(true);
+        java.util.List<String> cmd = buildForkCommandLine(gc);
+        assertTrue(cmd.contains("-Dalpha=1"));
+        assertTrue(cmd.contains("-Dbeta=two"));
+    }
+
+    @Test
+    void testExplicitSyspropertyTakesPrecedenceOverInheritAll() {
+        project.setProperty("shared", "fromProject");
+        Groovyc gc = newForkedGroovyc(project);
+        Environment.Variable explicit = new Environment.Variable();
+        explicit.setKey("shared");
+        explicit.setValue("fromSysproperty");
+        gc.addSysproperty(explicit);
+        gc.setInheritAll(true);
+        java.util.List<String> cmd = buildForkCommandLine(gc);
+        long count = cmd.stream().filter(s -> s.startsWith("-Dshared=")).count();
+        assertEquals(1, count);
+        assertTrue(cmd.contains("-Dshared=fromSysproperty"));
+    }
+
+    @Test
+    void testJvmargClasspathRejected() {
+        for (String forbidden : new String[]{"-classpath", "-cp", "--class-path", "--class-path=foo"}) {
+            Groovyc gc = newForkedGroovyc(project);
+            gc.createJvmarg().setValue(forbidden);
+            BuildException e = assertThrows(BuildException.class, () -> buildForkCommandLine(gc));
+            assertTrue(e.getMessage().contains("classpath"), "expected classpath error for " + forbidden + ", got: " + e.getMessage());
+        }
     }
 }
