@@ -34,7 +34,6 @@ import org.xml.sax.SAXNotSupportedException;
 import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.DefaultHandler;
 
-import javax.xml.XMLConstants;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
@@ -44,6 +43,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
 import java.io.StringReader;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -51,55 +51,90 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Stack;
 
-import static groovy.xml.XmlUtil.setFeatureQuietly;
 
 /**
  * Parse XML into a document tree that may be traversed similar to XPath
  * expressions.  For example:
- * <pre class="groovyTestCase">
+ * {@snippet lang="groovy" id="groovyTestCase" :
  * import groovy.xml.XmlSlurper
  * def rootNode = new XmlSlurper().parseText(
- *    '&lt;root&gt;&lt;one a1="uno!"/&gt;&lt;two&gt;Some text!&lt;/two&gt;&lt;/root&gt;' )
+ *    '<root><one a1="uno!"/><two>Some text!</two></root>' )
  *
  * assert rootNode.name() == 'root'
  * assert rootNode.one[0].@a1 == 'uno!'
  * assert rootNode.two.text() == 'Some text!'
  * rootNode.children().each { assert it.name() in ['one','two'] }
- * </pre>
+ * }
  * <p>
  * Note that in some cases, a 'selector' expression may not resolve to a
  * single node.  For example:
- * <pre class="groovyTestCase">
+ * {@snippet lang="groovy" id="groovyTestCase" :
  * import groovy.xml.XmlSlurper
  * def rootNode = new XmlSlurper().parseText(
- *    '''&lt;root&gt;
- *         &lt;a&gt;one!&lt;/a&gt;
- *         &lt;a&gt;two!&lt;/a&gt;
- *       &lt;/root&gt;''' )
+ *    '''<root>
+ *         <a>one!</a>
+ *         <a>two!</a>
+ *       </root>''' )
  *
  * assert rootNode.a.size() == 2
  * rootNode.a.each { assert it.text() in ['one!','two!'] }
- * </pre>
+ * }
+ *
+ * <p>
+ * A more realistic example — a book catalog. Given this XML:
+ * {@snippet lang="xml" :
+ * <catalog>
+ *   <book id="b1">
+ *     <title>Programming Groovy 3</title>
+ *     <author>Venkat Subramaniam</author>
+ *     <year>2024</year>
+ *   </book>
+ *   <book id="b2">
+ *     <title>Groovy in Action</title>
+ *     <author>Dierk Koenig</author>
+ *     <year>2015</year>
+ *   </book>
+ * </catalog>
+ * }
+ * the equivalent Groovy to slurp it and navigate the tree:
+ * {@snippet lang="groovy" :
+ * def catalog = new XmlSlurper().parseText(xml)
+ * assert catalog.book.size() == 2
+ * assert catalog.book[0].title.text() == 'Programming Groovy 3'
+ * catalog.book.findAll { it.year.text().toInteger() >= 2020 }.each { book ->
+ *     println "${book.title} by ${book.author}"
+ * }
+ * }
+ *
+ * Navigation through the returned {@link GPathResult} is lazy, so selectors are
+ * evaluated on demand rather than exposing an eager {@code groovy.util.Node} tree.
  *
  * @see GPathResult
  */
 public class XmlSlurper extends DefaultHandler {
-    private final XMLReader reader;
+    private XMLReader reader;
     private Node currentNode = null;
     private final Stack<Node> stack = new Stack<>();
     private final StringBuilder charBuffer = new StringBuilder();
     private final Map<String, String> namespaceTagHints = new HashMap<>();
     private boolean keepIgnorableWhitespace = false;
-    private boolean namespaceAware = false;
+    private boolean namespaceAware = true;
+    private boolean validating = false;
+    private boolean allowDocTypeDeclaration = false;
 
     /**
      * Creates a non-validating and namespace-aware <code>XmlSlurper</code> which does not allow DOCTYPE declarations in documents.
+     * <p>
+     * Parser options can be configured via setters before the first parse call:
+     * <pre>
+     * // Using Groovy named parameters:
+     * def slurper = new XmlSlurper(namespaceAware: false, keepIgnorableWhitespace: true)
+     * </pre>
      *
      * @throws ParserConfigurationException if no parser which satisfies the requested configuration can be created.
      * @throws SAXException for SAX errors.
      */
     public XmlSlurper() throws ParserConfigurationException, SAXException {
-        this(false, true);
     }
 
     /**
@@ -126,21 +161,56 @@ public class XmlSlurper extends DefaultHandler {
      * @throws SAXException for SAX errors.
      */
     public XmlSlurper(final boolean validating, final boolean namespaceAware, boolean allowDocTypeDeclaration) throws ParserConfigurationException, SAXException {
-        SAXParserFactory factory = FactorySupport.createSaxParserFactory();
-        factory.setNamespaceAware(namespaceAware);
+        this.validating = validating;
         this.namespaceAware = namespaceAware;
-        factory.setValidating(validating);
-        setFeatureQuietly(factory, XMLConstants.FEATURE_SECURE_PROCESSING, true);
-        setFeatureQuietly(factory, "http://apache.org/xml/features/disallow-doctype-decl", !allowDocTypeDeclaration);
-        reader = factory.newSAXParser().getXMLReader();
+        this.allowDocTypeDeclaration = allowDocTypeDeclaration;
     }
 
+    /**
+     * Creates a slurper backed by the supplied SAX reader.
+     *
+     * @param reader the XML reader whose features, properties, and handlers will be used
+     */
     public XmlSlurper(final XMLReader reader) {
         this.reader = reader;
     }
 
+    /**
+     * Creates a slurper backed by the supplied SAX parser.
+     *
+     * @param parser the SAX parser providing the {@link XMLReader} used for parsing
+     * @throws SAXException if the parser cannot provide an XML reader
+     */
     public XmlSlurper(final SAXParser parser) throws SAXException {
         this(parser.getXMLReader());
+    }
+
+    private void initReader() throws ParserConfigurationException, SAXException {
+        SAXParserFactory factory = FactorySupport.createSaxParserFactory(allowDocTypeDeclaration);
+        factory.setNamespaceAware(namespaceAware);
+        factory.setValidating(validating);
+        reader = factory.newSAXParser().getXMLReader();
+    }
+
+    private XMLReader getReader() throws ParserConfigurationException, SAXException {
+        if (reader == null) {
+            initReader();
+        }
+        return reader;
+    }
+
+    private XMLReader ensureReader() {
+        try {
+            return getReader();
+        } catch (ParserConfigurationException | SAXException e) {
+            throw new RuntimeException("Failed to initialize XML reader", e);
+        }
+    }
+
+    private void checkNotInitialized(String property) {
+        if (reader != null) {
+            throw new IllegalStateException(property + " must be set before parsing");
+        }
     }
 
     /**
@@ -166,6 +236,75 @@ public class XmlSlurper extends DefaultHandler {
      */
     public boolean isKeepIgnorableWhitespace() {
         return keepIgnorableWhitespace;
+    }
+
+    /**
+     * Determine if namespace handling is enabled.
+     *
+     * @return true if namespace handling is enabled
+     * @since 6.0.0
+     */
+    public boolean isNamespaceAware() {
+        return namespaceAware;
+    }
+
+    /**
+     * Enable and/or disable namespace handling.
+     * Must be set before the first parse call.
+     *
+     * @param namespaceAware the new desired value
+     * @throws IllegalStateException if called after parsing has started
+     * @since 6.0.0
+     */
+    public void setNamespaceAware(boolean namespaceAware) {
+        checkNotInitialized("namespaceAware");
+        this.namespaceAware = namespaceAware;
+    }
+
+    /**
+     * Determine if the parser validates documents.
+     *
+     * @return true if validation is enabled
+     * @since 6.0.0
+     */
+    public boolean isValidating() {
+        return validating;
+    }
+
+    /**
+     * Enable and/or disable validation.
+     * Must be set before the first parse call.
+     *
+     * @param validating the new desired value
+     * @throws IllegalStateException if called after parsing has started
+     * @since 6.0.0
+     */
+    public void setValidating(boolean validating) {
+        checkNotInitialized("validating");
+        this.validating = validating;
+    }
+
+    /**
+     * Determine if DOCTYPE declarations are allowed.
+     *
+     * @return true if DOCTYPE declarations are allowed
+     * @since 6.0.0
+     */
+    public boolean isAllowDocTypeDeclaration() {
+        return allowDocTypeDeclaration;
+    }
+
+    /**
+     * Enable and/or disable DOCTYPE declaration support.
+     * Must be set before the first parse call.
+     *
+     * @param allowDocTypeDeclaration the new desired value
+     * @throws IllegalStateException if called after parsing has started
+     * @since 6.0.0
+     */
+    public void setAllowDocTypeDeclaration(boolean allowDocTypeDeclaration) {
+        checkNotInitialized("allowDocTypeDeclaration");
+        this.allowDocTypeDeclaration = allowDocTypeDeclaration;
     }
 
     /**
@@ -195,9 +334,14 @@ public class XmlSlurper extends DefaultHandler {
      *         or character stream supplied by the application.
      */
     public GPathResult parse(final InputSource input) throws IOException, SAXException {
-        reader.setContentHandler(this);
-        reader.parse(input);
-        return getDocument();
+        try {
+            XMLReader r = getReader();
+            r.setContentHandler(this);
+            r.parse(input);
+            return getDocument();
+        } catch (ParserConfigurationException e) {
+            throw new SAXException(e);
+        }
     }
 
     /**
@@ -294,53 +438,73 @@ public class XmlSlurper extends DefaultHandler {
     // Delegated XMLReader methods
     //------------------------------------------------------------------------
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#getDTDHandler()
-    */
+    /**
+     * Returns the SAX DTD handler configured on the underlying reader.
+     *
+     * @return the configured DTD handler, or {@code null} if none has been set
+     */
     public DTDHandler getDTDHandler() {
-        return reader.getDTDHandler();
+        return ensureReader().getDTDHandler();
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#getEntityResolver()
-    */
+    /**
+     * Returns the SAX entity resolver configured on the underlying reader.
+     *
+     * @return the configured entity resolver, or {@code null} if none has been set
+     */
     public EntityResolver getEntityResolver() {
-        return reader.getEntityResolver();
+        return ensureReader().getEntityResolver();
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#getErrorHandler()
-    */
+    /**
+     * Returns the SAX error handler configured on the underlying reader.
+     *
+     * @return the configured error handler, or {@code null} if none has been set
+     */
     public ErrorHandler getErrorHandler() {
-        return reader.getErrorHandler();
+        return ensureReader().getErrorHandler();
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#getFeature(java.lang.String)
-    */
+    /**
+     * Looks up a SAX feature on the underlying reader.
+     *
+     * @param uri the fully qualified SAX feature URI
+     * @return {@code true} if the feature is enabled
+     * @throws SAXNotRecognizedException if the feature name is not recognized
+     * @throws SAXNotSupportedException if the feature is recognized but not supported
+     */
     public boolean getFeature(final String uri) throws SAXNotRecognizedException, SAXNotSupportedException {
-        return reader.getFeature(uri);
+        return ensureReader().getFeature(uri);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#getProperty(java.lang.String)
-    */
+    /**
+     * Looks up a SAX property on the underlying reader.
+     *
+     * @param uri the fully qualified SAX property URI
+     * @return the current value of the property
+     * @throws SAXNotRecognizedException if the property name is not recognized
+     * @throws SAXNotSupportedException if the property is recognized but not supported
+     */
     public Object getProperty(final String uri) throws SAXNotRecognizedException, SAXNotSupportedException {
-        return reader.getProperty(uri);
+        return ensureReader().getProperty(uri);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#setDTDHandler(org.xml.sax.DTDHandler)
-    */
+    /**
+     * Sets the SAX DTD handler on the underlying reader.
+     *
+     * @param dtdHandler the DTD handler to receive notation and unparsed entity callbacks
+     */
     public void setDTDHandler(final DTDHandler dtdHandler) {
-        reader.setDTDHandler(dtdHandler);
+        ensureReader().setDTDHandler(dtdHandler);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#setEntityResolver(org.xml.sax.EntityResolver)
-    */
+    /**
+     * Sets the SAX entity resolver on the underlying reader.
+     *
+     * @param entityResolver the resolver to use for external entities
+     */
     public void setEntityResolver(final EntityResolver entityResolver) {
-        reader.setEntityResolver(entityResolver);
+        ensureReader().setEntityResolver(entityResolver);
     }
 
     /**
@@ -349,53 +513,83 @@ public class XmlSlurper extends DefaultHandler {
      * @param base The URL used to resolve relative URLs
      */
     public void setEntityBaseUrl(final URL base) {
-        reader.setEntityResolver((publicId, systemId) -> new InputSource(new URL(base, systemId).openStream()));
+        ensureReader().setEntityResolver((publicId, systemId) -> {
+            try {
+                return new InputSource(base.toURI().resolve(systemId).toURL().openStream());
+            } catch (URISyntaxException e) {
+                throw new SAXException(e);
+            }
+        });
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#setErrorHandler(org.xml.sax.ErrorHandler)
-    */
+    /**
+     * Sets the SAX error handler on the underlying reader.
+     *
+     * @param errorHandler the handler to receive parser warnings and errors
+     */
     public void setErrorHandler(final ErrorHandler errorHandler) {
-        reader.setErrorHandler(errorHandler);
+        ensureReader().setErrorHandler(errorHandler);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#setFeature(java.lang.String, boolean)
-    */
+    /**
+     * Enables or disables a SAX feature on the underlying reader.
+     *
+     * @param uri the fully qualified SAX feature URI
+     * @param value the value to apply
+     * @throws SAXNotRecognizedException if the feature name is not recognized
+     * @throws SAXNotSupportedException if the feature is recognized but not supported
+     */
     public void setFeature(final String uri, final boolean value) throws SAXNotRecognizedException, SAXNotSupportedException {
-        reader.setFeature(uri, value);
+        ensureReader().setFeature(uri, value);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.XMLReader#setProperty(java.lang.String, java.lang.Object)
-    */
+    /**
+     * Sets a SAX property on the underlying reader.
+     *
+     * @param uri the fully qualified SAX property URI
+     * @param value the value to apply
+     * @throws SAXNotRecognizedException if the property name is not recognized
+     * @throws SAXNotSupportedException if the property is recognized but not supported
+     */
     public void setProperty(final String uri, final Object value) throws SAXNotRecognizedException, SAXNotSupportedException {
-        reader.setProperty(uri, value);
+        ensureReader().setProperty(uri, value);
     }
 
     // ContentHandler interface
     //-------------------------------------------------------------------------
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.ContentHandler#startDocument()
-    */
+    /**
+     * Resets the current slurped document before SAX events for a new parse begin.
+     *
+     * @throws SAXException if the SAX pipeline reports an error
+     */
     @Override
     public void startDocument() throws SAXException {
         currentNode = null;
         charBuffer.setLength(0);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.helpers.DefaultHandler#startPrefixMapping(java.lang.String, java.lang.String)
-    */
+    /**
+     * Records namespace prefix hints for later {@link GPathResult} navigation.
+     *
+     * @param tag the declared prefix
+     * @param uri the namespace URI bound to the prefix
+     * @throws SAXException if the SAX pipeline reports an error
+     */
     @Override
     public void startPrefixMapping(final String tag, final String uri) throws SAXException {
         if (namespaceAware) namespaceTagHints.put(tag, uri);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.ContentHandler#startElement(java.lang.String, java.lang.String, java.lang.String, org.xml.sax.Attributes)
-    */
+    /**
+     * Creates a slurper node for the current element and pushes it onto the parse stack.
+     *
+     * @param namespaceURI the namespace URI, or an empty string if namespaces are unavailable
+     * @param localName the local element name
+     * @param qName the qualified element name as reported by SAX
+     * @param atts the element attributes
+     * @throws SAXException if node creation fails
+     */
     @Override
     public void startElement(final String namespaceURI, final String localName, final String qName, final Attributes atts) throws SAXException {
         addCdata();
@@ -429,22 +623,40 @@ public class XmlSlurper extends DefaultHandler {
         currentNode = newElement;
     }
 
+    /**
+     * Receives ignorable whitespace and optionally preserves it as text content.
+     *
+     * @param buffer the character buffer supplied by SAX
+     * @param start the start offset in the buffer
+     * @param len the number of characters to read
+     * @throws SAXException if the SAX pipeline reports an error
+     */
     @Override
     public void ignorableWhitespace(char[] buffer, int start, int len) throws SAXException {
         if (keepIgnorableWhitespace) characters(buffer, start, len);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.ContentHandler#characters(char[], int, int)
-    */
+    /**
+     * Buffers character data until the surrounding element boundary is reached.
+     *
+     * @param ch the character buffer supplied by SAX
+     * @param start the start offset in the buffer
+     * @param length the number of characters to read
+     * @throws SAXException if the SAX pipeline reports an error
+     */
     @Override
     public void characters(final char[] ch, final int start, final int length) throws SAXException {
         charBuffer.append(ch, start, length);
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.ContentHandler#endElement(java.lang.String, java.lang.String, java.lang.String)
-    */
+    /**
+     * Flushes buffered text and restores the parent node when an end tag is reached.
+     *
+     * @param namespaceURI the namespace URI, or an empty string if namespaces are unavailable
+     * @param localName the local element name
+     * @param qName the qualified element name as reported by SAX
+     * @throws SAXException if text handling fails
+     */
     @Override
     public void endElement(final String namespaceURI, final String localName, final String qName) throws SAXException {
         addCdata();
@@ -454,9 +666,12 @@ public class XmlSlurper extends DefaultHandler {
         }
     }
 
-    /* (non-Javadoc)
-    * @see org.xml.sax.ContentHandler#endDocument()
-    */
+    /**
+     * Receives the end-of-document callback.
+     * The built tree remains available through the one-shot {@link #getDocument()} result.
+     *
+     * @throws SAXException if the SAX pipeline reports an error
+     */
     @Override
     public void endDocument() throws SAXException {
     }
